--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "calc",
   "version": "0.1.0",
   "private": true,
+  "files.associations": {
+    "*.js": "javascriptreact"
+},
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23"
   }
 }
